--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-click-away-listener": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-ionicons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
