--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-modal": "^3.13.1",
     "react-native-youtube": "^2.0.1",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.21",
